# purgeless

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  package.json  pnpm-lock.yaml
.codex/environments/: environment.toml
scripts/: bootstrap.sh  preflight.sh
sidecar/: pyproject.toml
sidecar/fixtures/: papa_leao.3mf
sidecar/purgeless_sidecar/: __init__.py  loader.py  paint.py  segment.py  segment_ai.py  server.py  split.py  types.py
sidecar/purgeless_sidecar/ai/: __init__.py  backproject.py  download.py  render.py  sam2_wrapper.py
sidecar/tests/: conftest.py  test_backproject.py  test_download.py  test_loader.py  test_paint.py  test_render.py  test_sam2_wrapper.py  test_segment.py  test_segment_ai.py  test_server.py  test_split.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/components/: ActionBar.tsx  DropZone.tsx  ProgressOverlay.tsx  RegionsPanel.tsx  Viewport.tsx
src/ipc/: sidecar.ts
src/state/: regions.ts
