[project]
name = "purgeless-sidecar"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "trimesh>=4.4.0",
  "numpy>=2.0.0",
  "open3d>=0.18.0",
  "manifold3d>=2.5.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
  "networkx>=3.6.1",
  "lxml>=6.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pyinstaller>=6.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["purgeless_sidecar"]
