[project]
name = "purgeless-sidecar"
version = "0.2.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "trimesh>=4.4.0",
  "numpy>=2.0.0",
  "open3d>=0.18.0",
  "manifold3d>=2.5.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.13.0",
  "networkx>=3.6.1",
  "lxml>=6.1.0",
  "pyrender>=0.1.45",
  "pyglet<2",
  "hdbscan>=0.8.36",
  "tqdm>=4.66.0",
  "torch>=2.4.0",
]

[project.optional-dependencies]
ai = [
  "sam-2 @ git+https://github.com/facebookresearch/sam2.git",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pyinstaller>=6.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["purgeless_sidecar"]

[tool.hatch.metadata]
allow-direct-references = true
